[package]
name = "retryable"
version = "0.1.1"
authors = ["Andrea Campana <info@andreacampana.me>"]
edition = "2018"
license = "MIT"
description = "Automatic function retry macro"
readme = "README.md"
repository = "https://github.com/BrokenSt0rm/retryable"

[dependencies.proc_macros]
package = "retryable-proc_macros"
path = "src/proc_macros"
version = "0.1.1"

[dependencies]
async-std = "1.10.0"

[workspace]
members = ["src/proc_macros"]